--- a/public/css/dialog.css
+++ b/public/css/dialog.css
@@ -58,3 +58,12 @@ textarea {
 #dialog-message h4{
     text-align: center;
 }
+
+.ui-selectmenu-text {
+    line-height: 1 !important;
+    padding-top: 5px !important;
+}
+
+.overflow-select {
+    height: 150px;
+}
