--- a/public/css/grid.scss
+++ b/public/css/grid.scss
@@ -28,7 +28,7 @@ $grid-div-padding-left: 2px;
         width: 100%;
         border-right: none;
       }
-      div { width: $width-div-tbl; text-align: $text-align-div-tbl; }
+      div { width: $width-div-tbl; text-align: $text-align-div-tbl; text-overflow: ellipsis; white-space: nowrap; overflow: hidden;}
       @if $display-td-tbl {}
       @else { display: none; }
     }
@@ -105,15 +105,16 @@ $grid-div-padding-left: 2px;
 @include table-td("#tbl-user", false, 40px, center, 1, true);
 @include table-td("#tbl-user", false, 250px, left, 2, true);
 @include table-td("#tbl-user", false, 200px, left, 3, true);
-@include table-td("#tbl-user", true, 200px, left, 4, true);
+@include table-td("#tbl-user", false, 200px, left, 4, true);
+@include table-td("#tbl-user", true, 200px, left, 5, true);
 
 @include table-td("#tbl-role", false, 40px, center, 1, true);
 @include table-td("#tbl-role", true, 650px, left, 2, true);
 
 @include table-td("#tbl-period", false, 40px, center, 1, true);
-@include table-td("#tbl-period", false, 400px, left, 2, true);
-@include table-td("#tbl-period", false, 300px, left, 3, true);
-@include table-td("#tbl-period", true, 50px, left, 4, true);
+@include table-td("#tbl-period", false, 200px, left, 2, true);
+@include table-td("#tbl-period", false, 400px, left, 3, true);
+@include table-td("#tbl-period", true, 100px, left, 4, true);
 
 @include table-td("#tbl-role-office", false, 20px, center, 1, true);
 @include table-td("#tbl-role-office", true, 240px, left, 2, true);
