--- a/views/layout/taskDialog.ejs
+++ b/views/layout/taskDialog.ejs
@@ -2,5 +2,23 @@
     <label class="label-txt" for="task-value">Поставленная задача:</label>
     <textarea class="input-txt" id="task-value" rows="10" cols="50"></textarea>
     <label class="label-txt" for="task-percent">% выполнения:</label>
-    <input class="input-txt" id="task-percent" type="text"  value=""/>
+    <div class="tbl-block">
+        <div class="tbl-block-cell" id="select-type-value">
+            <select id="list-type-value">
+                <option value="0">проценты</option>
+                <option value="1">количество</option>
+                <option value="2">рубли</option>
+                <option value="3">договоров</option>
+                <option value="4">заяков</option>
+            </select>
+        </div>
+        <div class="tbl-band"></div>
+        <div class="tbl-block-cell">
+            <input class="input-txt" id="task-value-set" type="text"  value=""/>
+        </div>
+        <div class="tbl-band"></div>
+        <div class="tbl-block-cell">
+            <input class="input-txt" id="task-value-def" type="text"  value=""/>
+        </div>
+    </div>
 </div>
