--- a/public/css/dialog.css
+++ b/public/css/dialog.css
@@ -20,6 +20,12 @@
     margin-bottom: 2px;
 }
 
+.label-txt-2 {
+    font-weight: bold;
+    text-align: left;
+    vertical-align: middle;
+}
+
 .label-check2 {
     display: block;
     font-weight: bold;
