--- a/public/css/home.css
+++ b/public/css/home.css
@@ -101,6 +101,7 @@ canvas {
 .tbl-block-cell {
     display: table-cell;
     text-align: center;
+    vertical-align: middle;
 }
 
 .tbl-band {
@@ -116,6 +117,7 @@ canvas {
     letter-spacing: 1px;
     line-height: 1.5;
     padding-left: 2px;
+    text-align: left;
 }
 #radio-role div {
     margin-bottom: 3px;
@@ -127,7 +129,6 @@ canvas {
     margin-top: 7px;
     margin-right: 5px;
     padding: 5px 4px 2px 9px;
-    width: 281px;
 }
 
 
