--- a/public/css/home.css
+++ b/public/css/home.css
@@ -124,8 +124,8 @@ canvas {
 }
 
 #radio-role {
-    border: 1px solid #bababa;
-    border-radius: 4px;
+    /*border: 1px solid #bababa;
+    border-radius: 4px;*/
     margin-top: 7px;
     margin-right: 5px;
     padding: 5px 4px 2px 9px;
