--- a/public/css/grid.css
+++ b/public/css/grid.css
@@ -389,7 +389,7 @@
   overflow: hidden; }
 
 #tbl-task .td-2 div {
-  width: 350px;
+  width: 340px;
   text-align: left;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -400,7 +400,7 @@
   border-right: none; }
   #tbl-task .td-3 div {
     width: 50px;
-    text-align: center;
+    text-align: right;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden; }
@@ -415,7 +415,7 @@
   overflow: hidden; }
 
 #tbl-task-prev .td-2 div {
-  width: 350px;
+  width: 340px;
   text-align: left;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -426,7 +426,7 @@
   border-right: none; }
   #tbl-task-prev .td-3 div {
     width: 50px;
-    text-align: center;
+    text-align: right;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden; }
