--- a/views/layout/logo.ejs
+++ b/views/layout/logo.ejs
@@ -3,12 +3,12 @@
     <h1 class="rgt" style="padding-top: 1px; margin-right: 5px;">Рейтинговая система</h1>
     <div id="radio-role" class="tbl-block rgt">
         <div class="tbl-block-cell">
-            <input type="radio" id="radio-master" name="radio-m" checked/>
+            <input type="radio" id="radio-master" name="radio-m" checked <%= txtRolePri %>/>
             <label for="radio-master">Я оцениваю</label>
         </div>
         <div class="tbl-band"></div>
         <div class="tbl-block-cell">
-            <input type="radio" id="radio-pupil" name="radio-m"/>
+            <input type="radio" id="radio-pupil" name="radio-m" <%= txtRoleSec %>/>
             <label for="radio-pupil">Меня оценивают</label>
         </div>
     </div>
