--- a/views/home.ejs
+++ b/views/home.ejs
@@ -43,8 +43,8 @@
             -->
             <div id="radio-btn">
                 <div id="radio">
-                    <input type="radio" id="radio1" name="radio" checked="checked" /><label for="radio1">Офис/Направление</label>
-                    <input type="radio" id="radio2" name="radio" /><label for="radio2">Руководитель/Сотрудник</label>
+                    <input type="radio" id="radio1" name="radio" checked="checked" /><label for="radio1">Офис/Направ</label>
+                    <input type="radio" id="radio2" name="radio" /><label for="radio2">Руковод/Сотрудник</label>
                 </div>
             </div>
         </div>
@@ -218,6 +218,7 @@
             <button id="btn-setting">Настройка</button>
             <button id="btn-doc-1">Компитенции</button>
             <button id="btn-doc-2">Шкала оценок</button>
+            <button id="btn-chg-role">Смена роли</button>
             <h5 id="username"><%= username%></h5>
         </div>
     </div>
