--- a/views/home.ejs
+++ b/views/home.ejs
@@ -218,7 +218,6 @@
             <button id="btn-setting">Настройка</button>
             <button id="btn-doc-1">Компитенции</button>
             <button id="btn-doc-2">Шкала оценок</button>
-            <button id="btn-chg-role">Смена роли</button>
             <h5 id="username"><%= username%></h5>
         </div>
     </div>
@@ -229,6 +228,7 @@
 <% include ./layout/markDialog.ejs %>
 <% include ./layout/taskDialog.ejs %>
 <% include ./layout/msgDialog.ejs %>
+<% include ./layout/msgDialogRole.ejs %>
 <% include ./layout/rmDialog.ejs %>
 <% include ./layout/waitInfo.ejs %>
 <% script('js/grid.js') -%>
