--- a/views/home.ejs
+++ b/views/home.ejs
@@ -216,7 +216,7 @@
         <div id="footer-menu">
             <button id="button-logout">Выход</button>
             <button id="btn-setting">Настройка</button>
-            <button id="btn-doc-1">Компитенции</button>
+            <button id="btn-doc-1">Компетенции</button>
             <button id="btn-doc-2">Шкала оценок</button>
             <h5 id="username"><%= username%></h5>
         </div>
