--- a/views/home.ejs
+++ b/views/home.ejs
@@ -36,11 +36,12 @@
             <button id="button-groups">Направления</button>
             <button id="button-quarter-minus">Пред.период</button>
             <button id="button-quarter-plus">След.период</button>
-            <!--
-            <div id="select-subject">
-                <select id="subject-list"></select>
+            <div id="select-groups-direct">
+                <select id="list-groups-direct">
+                    <option value="1">Группа ЦО</option>
+                    <option value="2">Группа РЦ</option>
+                </select>
             </div>
-            -->
             <div id="radio-btn">
                 <div id="radio">
                     <input type="radio" id="radio1" name="radio" checked="checked" /><label for="radio1">Офис/Направ</label>
