--- a/views/setting.ejs
+++ b/views/setting.ejs
@@ -170,6 +170,49 @@
                         <button id="button-del-cri-group-content">Удалить</button>
                     </div>
                 </div>
+                <div class="tbl-band"></div>
+                <div class="tbl-block-cell" id="nav-cri-group-content">
+                    <div id="tbl-cri-group-content" class="hle-grid">
+                        <div class="tbl-head ui-corner-top">
+                            <table class="tbl">
+                                <thead>
+                                <tr>
+                                    <th class="td-1"><div>#</div></th>
+                                    <th class="td-2"><div>Состав группы критериев</div></th>
+                                </tr>
+                                </thead>
+                            </table>
+                        </div>
+                        <div class="tbl-body">
+                            <table id="tbl-cri-group-content-body" class="tbl">
+                                <tbody>
+                                <% var i = 0; %>
+                                <% lstCriGroupContent.forEach(function(val) { %>
+                                <% i++; %>
+                                <tr data-id="<%= val._id %>">
+                                    <td class="td-1"><div><%= i %></div></td>
+                                    <td class="td-2"><div><%= val.name %></div></td>
+                                </tr>
+                                <% }); %>
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="tbl-footer ui-corner-bottom">
+                            <table id="tbl-cri-group-content-footer" class="tbl">
+                                <tfoot>
+                                <tr>
+                                    <th class="td-1"><div><%= i %></div></th>
+                                    <th class="td-2"><div></div></th>
+                                </tr>
+                                </tfoot>
+                            </table>
+                        </div>
+                    </div>
+                    <div class="control-button">
+                        <button id="button-add-cri-group-content">Добавить</button>
+                        <button id="button-del-cri-group-content">Удалить</button>
+                    </div>
+                </div>
             </div>
         </div>
         <div id="cri-tabs-3">
