--- a/public/css/home.css
+++ b/public/css/home.css
@@ -66,7 +66,7 @@ canvas {
     padding: 3px;
 }
 
-#radio-btn {
+#radio-btn, #select-groups-direct {
     display: table-cell;
     text-align: right;
     vertical-align: middle;
@@ -129,6 +129,11 @@ canvas {
     margin-top: 7px;
     margin-right: 5px;
     padding: 5px 4px 2px 9px;
+}
+
+#select-groups-direct {
+    padding-bottom: 0;
+    margin: 0;
 }
 
 
