--- a/views/home.ejs
+++ b/views/home.ejs
@@ -38,8 +38,8 @@
             <button id="button-quarter-plus">След.период</button>
             <div id="select-groups-direct">
                 <select id="list-groups-direct">
-                    <option value="1">Группа ЦО</option>
                     <option value="2">Группа РЦ</option>
+                    <option value="3">Группа Направлений</option>
                 </select>
             </div>
             <div id="radio-btn">
