--- a/public/css/header.css
+++ b/public/css/header.css
@@ -25,7 +25,7 @@
     border: 1px solid #e78f08;
     background-color: #f6a828;
     color: #ffffff;
-    padding: 3px;
+    padding: 3px 3px 2px 3px;
     margin-bottom: 5px;
 }
 
