--- a/public/css/home.css
+++ b/public/css/home.css
@@ -63,7 +63,7 @@ canvas {
     background-color: #f6a828;
     color: #ffffff;
     margin-top: 5px;
-    padding: 3px;
+    padding: 3px 3px 3px 3px;
 }
 
 #radio-btn, #select-groups-direct {
@@ -74,6 +74,11 @@ canvas {
 
 .ui-buttonset {
     margin-right: 4px  !important;
+}
+
+.ui-selectmenu-text {
+    padding-top: 7px !important;
+    padding-bottom: 7px !important;
 }
 
 #footer-menu {
@@ -135,6 +140,8 @@ canvas {
     padding-bottom: 0;
     margin: 0;
 }
+
+.overflow-select { height: 50px; }
 
 
 
