--- a/views/setting.ejs
+++ b/views/setting.ejs
@@ -170,49 +170,6 @@
                         <button id="button-del-cri-group-content">Удалить</button>
                     </div>
                 </div>
-                <div class="tbl-band"></div>
-                <div class="tbl-block-cell" id="nav-cri-group-content">
-                    <div id="tbl-cri-group-content" class="hle-grid">
-                        <div class="tbl-head ui-corner-top">
-                            <table class="tbl">
-                                <thead>
-                                <tr>
-                                    <th class="td-1"><div>#</div></th>
-                                    <th class="td-2"><div>Состав группы критериев</div></th>
-                                </tr>
-                                </thead>
-                            </table>
-                        </div>
-                        <div class="tbl-body">
-                            <table id="tbl-cri-group-content-body" class="tbl">
-                                <tbody>
-                                <% var i = 0; %>
-                                <% lstCriGroupContent.forEach(function(val) { %>
-                                <% i++; %>
-                                <tr data-id="<%= val._id %>">
-                                    <td class="td-1"><div><%= i %></div></td>
-                                    <td class="td-2"><div><%= val.name %></div></td>
-                                </tr>
-                                <% }); %>
-                                </tbody>
-                            </table>
-                        </div>
-                        <div class="tbl-footer ui-corner-bottom">
-                            <table id="tbl-cri-group-content-footer" class="tbl">
-                                <tfoot>
-                                <tr>
-                                    <th class="td-1"><div><%= i %></div></th>
-                                    <th class="td-2"><div></div></th>
-                                </tr>
-                                </tfoot>
-                            </table>
-                        </div>
-                    </div>
-                    <div class="control-button">
-                        <button id="button-add-cri-group-content">Добавить</button>
-                        <button id="button-del-cri-group-content">Удалить</button>
-                    </div>
-                </div>
             </div>
         </div>
         <div id="cri-tabs-3">
@@ -225,8 +182,7 @@
                                     <tr>
                                         <th class="td-1"><div>#</div></th>
                                         <th class="td-2"><div>Наименование</div></th>
-                                        <th class="td-3"><div>dT объекта</div></th>
-                                        <th class="td-4"><div>dT субъекта</div></th>
+                                        <th class="td-3"><div>Группа</div></th>
                                     </tr>
                                 </thead>
                             </table>
@@ -237,14 +193,21 @@
                                 <% var i=0; %>
                                 <% var idPerObj = 0; %>
                                 <% var idPerSbj = 0; %>
+                                <% var idDirGroups = 0; %>
                                 <% lstObj.forEach(function(val) { %>
                                 <% i++; %>
                                 <% idPerObj = (val.tPeriodObj) ? val.tPeriodObj._id : 0%>
                                 <% idPerSbj = (val.tPeriodSbj) ? val.tPeriodSbj._id : 0%>
-                                <tr data-id="<%= val._id %>" data-period-obj="<%= idPerObj %>" data-period-sbj="<%= idPerSbj %>">
+                                <% idDirGroups = (val.tDirGroups) ? val.tDirGroups._id : 0%>
+                                <tr data-id="<%= val._id %>" data-period-obj="<%= idPerObj %>" data-period-sbj="<%= idPerSbj %>" data-dir-groups="<%= idDirGroups %>">
                                     <td class="td-1"><div><%= i %></div></td>
                                     <td class="td-2"><div><%= val.name %></div></td>
-                                    <% if (val.tPeriodObj) { %>
+                                    <% if (val.tDirGroups) { %>
+                                        <td class="td-3"><div><%= val.tDirGroups.nameDirGroups %></div></td>
+                                        <%} else { %>
+                                        <td class="td-3"><div>Нет данных</div></td>
+                                    <%}%>
+                                    <!--<% if (val.tPeriodObj) { %>
                                     <td class="td-3"><div><%= val.tPeriodObj.descPeriod %></div></td>
                                     <%} else { %>
                                     <td class="td-3"><div>Нет данных</div></td>
@@ -253,7 +216,7 @@
                                     <td class="td-4"><div><%= val.tPeriodSbj.descPeriod %></div></td>
                                     <%} else { %>
                                     <td class="td-4"><div>Нет данных</div></td>
-                                    <%}%>
+                                    <%}%>-->
                                 </tr>
                                 <% }); %>
                                 </tbody>
@@ -266,7 +229,6 @@
                                     <th class="td-1"><div><%= i %></div></th>
                                     <th class="td-2"><div></div></th>
                                     <th class="td-3"><div></div></th>
-                                    <th class="td-4"><div></div></th>
                                 </tr>
                                 </tfoot>
                             </table>
